fix: links style on mobile

--- a/quartz/components/styles/links.scss
+++ b/quartz/components/styles/links.scss
@@ -3,6 +3,7 @@ links {
   margin-bottom: 4rem;
   opacity: 0.7;
   align-self: stretch;
+  flex-basis: 100%;
 
   & ul {
     list-style: none;
